Add admin user with ability to create/edit/delete users. No other user should be allowed to do the same

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -25,6 +25,7 @@ default.number.format=0
 default.created.message={0} {1} created
 default.updated.message={0} {1} updated
 default.deleted.message={0} {1} deleted
+
 default.not.deleted.message={0} {1} could not be deleted
 default.not.found.message={0} not found with id {1}
 default.optimistic.locking.failure=Another user has updated this {0} while you were editing
@@ -54,3 +55,12 @@ typeMismatch.java.lang.Long=Property {0} must be a valid number
 typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
+
+user.create.passwordConfirmMismatchMessage = Password and confirm password do not match.
+
+question.label=Question
+user.label=User
+user.username.label=Username
+userRole.role.label=Role
+user.accountExpired.label=AccountExpired
+user.password.label=Password
