Test functionality to generate questionnaire link to be sent to user

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -56,6 +56,9 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 
+mail.token.invalid=Token is invalid
+mail.token.consumed=Token is already consumed
+
 user.create.passwordConfirmMismatchMessage = Password and confirm password do not match.
 
 question.label=Question
